fix: Fix code after inspection